dataset/local/tf_s3_disable_acl/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-good-bucket
      - type: aws_s3_bucket_ownership_controls
        values:
          bucket: my-good-bucket
          rule:
            - object_ownership: BucketOwnerEnforced
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-bad-bucket
      - type: aws_s3_bucket_ownership_controls
        values:
          bucket: my-bad-bucket
          rule:
            - object_ownership: ObjectWriter
